--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,9 @@
     "target": "ES2020",
     "module": "ESNext",
     "rootDir": "./src",
-    "outDir": "./dist",
+    "outDir": "./dist",  // scripts → dist로 변경
     "strict": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "moduleResolution": "node"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"]
 }
