--- a/package.json
+++ b/package.json
@@ -1,10 +1,3 @@
-{
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w"
-  },
-  "dependencies": {
-    "@minecraft/server": "1.2.0",  // ^ 제거
-    "prismarine-physics": "1.10.0" // 정확한 버전 지정
-  }
+"scripts": {
+  "build": "tsc"
 }
