--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,15 @@
       "entry": "dist/main.js",
       "version": [1,0,0]
     }
+  ],
+  "dependencies": [
+    {
+      "module_name": "@minecraft/server",
+      "version": "1.14.0"
+    },
+    {
+      "module_name": "@minecraft/server-ui",
+      "version": "1.3.0"
+    }
   ]
 }
