--- a/package.json
+++ b/package.json
@@ -1,3 +1,13 @@
-"scripts": {
-  "build": "tsc"
+{
+  "name": "project_psybox",
+  "version": "1.0.0",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w"
+  },
+  "dependencies": {
+    "@minecraft/server": "^1.14.0",
+    "@minecraft/server-ui": "1.3.0",
+    "prismarine-physics": "^1.10.0"
+  }
 }
