--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,10 @@
     "target": "ES2020",
     "module": "ESNext",
     "rootDir": "./src",
-    "outDir": "./dist",  // scripts → dist로 변경
+    "outDir": "./dist",
     "strict": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "esModuleInterop": true
   },
   "include": ["src/**/*"]
 }
