--- a/manifest.json
+++ b/manifest.json
@@ -11,19 +11,13 @@
     {
       "type": "script",
       "language": "javascript",
-      "uuid": "e736671d-47cb-46a1-a7ff-3686e3c0cb27",
-      "entry": "scripts/main.js",
-      "version": [1,0,0]
+      "entry": "scripts/main.js"
     }
   ],
   "dependencies": [
     {
       "module_name": "@minecraft/server",
       "version": "1.14.0"
-    },
-    {
-      "module_name": "@minecraft/server-ui",
-      "version": "1.3.0"
     }
   ]
 }
