--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@minecraft/server": "^1.14.0",
+    "@minecraft/server": "1.14.0",
     "@minecraft/server-ui": "1.3.0"
   }
 }
