--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "project_psybox",
-  "version": "1.0.0",
+  "name": "cybox-spirra-physics",
+  "version": "4.0.0",
+  "description": "Minecraft Bedrock 1.21.82 Physics Engine",
+  "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc --watch"
   },
   "dependencies": {
-    "@minecraft/server": "^1.14.0",
-    "@minecraft/server-ui": "1.3.0"
+    "@minecraft/server": "1.14.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0"
   }
 }
