--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "strict": true,
+    "module": "ES2020",
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./src",
+    "outDir": "./dist",
+    "declaration": false,
+    "strict": true,
+    "noImplicitAny": false,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
