--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "psybox",
-  "version": "1.0.0",
-  "description": "Minecraft Bedrock Script API 2.0.0-beta 물리엔진",
-  "main": "dist/main.js",
+  "name": "psybox-physics-engine",
+  "version": "2.0.0-beta",
+  "description": "Minecraft Bedrock Physics Engine for Script API 2.0.0-beta",
+  "main": "scripts/main.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "clean": "rimraf dist",
-    "dev": "tsc --watch"
+    "clean": "rimraf scripts",
+    "deploy": "npm run build && xcopy scripts ..\\development_behavior_packs\\psybox\\scripts /E /Y"
   },
-  "keywords": ["minecraft", "physics", "bedrock", "addon"],
-  "author": "Cybox Digital Entertainment",
-  "license": "",
   "dependencies": {
-    "@minecraft/server": "2.1.0-beta",
-    "@minecraft/server-gametest": "2.0.0-beta"
+    "@minecraft/server": "2.0.0-beta",
+    "@minecraft/server-gametest": "1.0.0-beta"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
-    "rimraf": "^5.0.0"
+    "rimraf": "^3.0.2"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "author": "CYBOX Digital Entertainment",
+  "license": "MIT"
 }
