--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,29 @@
   "format_version": 2,
   "header": {
     "name": "Psybox Physics Engine",
-    "description": "Advanced Physics Engine for Minecraft Bedrock using Script API 2.0.0-beta",
+    "description": "Script API 2.0.0-beta",
     "uuid": "5e72f61c-face-4e56-8763-7eb8b8482ab2",
-    "version": [2, 0, 0],
-    "min_engine_version": [1, 21, 80]
+    "version": [
+      2,
+      0,
+      0
+    ],
+    "min_engine_version": [
+      1,
+      21,
+      70
+    ]
   },
   "modules": [
     {
       "type": "script",
       "language": "javascript",
       "uuid": "af0c1af8-9264-4f52-b74b-94ad70ada807",
-      "version": [2, 0, 0],
+      "version": [
+        1,
+        0,
+        0
+      ],
       "entry": "scripts/main.js"
     }
   ],
@@ -26,5 +38,7 @@
       "version": "1.0.0-beta"
     }
   ],
-  "capabilities": ["script_eval"]
+  "capabilities": [
+    "script_eval"
+  ]
 }
