--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,30 @@
+
 {
   "format_version": 2,
   "header": {
     "name": "Psybox Physics Engine",
-    "description": "Script API 2.0.0-beta 물리엔진",
+    "description": "Beta API 2.0.0 물리엔진 시스템",
     "uuid": "1c81c200-0c67-4932-8e84-d18dba5550e3",
-    "version": [2, 0, 0],
-    "min_engine_version": [1, 21, 82]
+    "version": [1, 0, 0],
+    "min_engine_version": [1, 21, 80]
   },
   "modules": [
     {
       "type": "script",
       "language": "javascript",
       "uuid": "3e5f6789-abcd-1234-5678-901234567890",
-      "version": [2, 0, 0],
+      "version": [1, 0, 0],
       "entry": "scripts/main.js"
     }
   ],
   "dependencies": [
     {
       "module_name": "@minecraft/server",
-      "version": "2.0.0-beta"
+      "version": "2.0.0-beta.1.21.82-stable"
     },
     {
       "module_name": "@minecraft/server-gametest",
-      "version": "1.0.0-beta"
+      "version": "1.0.0-beta.1.21.70-stable"
     }
   ],
   "capabilities": ["script_eval"]
