--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,16 @@
+
 {
   "compilerOptions": {
     "target": "ES2020",
     "module": "ES2020",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "./src",
     "outDir": "./scripts",
     "declaration": false,
-    "strict": true,
     "noImplicitAny": false,
+    "noImplicitThis": false,
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "scripts"]
+  "exclude": ["node_modules"]
 }
