--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "psybox-physics-engine",
-  "version": "2.1.2-beta",
-  "description": "Advanced physics engine for Minecraft Bedrock Edition",
-  "main": "scripts/main.js",
+  "version": "2.1.3-beta",
+  "description": "마인크래프트 베드락 에디션용 고급 물리엔진",
   "scripts": {
     "build": "tsc",
-    "watch": "tsc --watch",
-    "clean": "rimraf scripts"
+    "watch": "tsc --watch"
   },
-  "keywords": ["minecraft", "bedrock", "physics", "addon"],
-  "author": "Psybox Team",
-  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^5.3.0",
+    "@types/node": "^20.0.0"
+  },
   "dependencies": {
     "@minecraft/server": "2.0.0-beta.1.21.82-stable",
     "@minecraft/server-gametest": "1.0.0-beta.1.21.70-stable"
-  },
-  "devDependencies": {
-    "typescript": "^5.0.0",
-    "rimraf": "^3.0.2"
   }
 }
