--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,17 +4,12 @@
     "module": "ES2020",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "./src",
-    "rootDir": "./src",
-    "outDir": "./scripts",
-    "declaration": false,
     "strict": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "exactOptionalPropertyTypes": false,
+    "declaration": false,
+    "outDir": "./scripts",
+    "rootDir": "./src",
+    "removeComments": true,
+    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
   "include": [
