--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "format_version": 2,
   "header": {
-    "description": "Psybox Physics Engine v2.1.3-beta - 마인크래프트 베드락용 고급 물리 시뮬레이션",
     "name": "Psybox Physics Engine",
-    "uuid": "c7fe7cce-cc7e-4d00-8a70-8b9cc025adf8",
+    "description": "Advanced physics simulation for Minecraft Bedrock Edition",
+    "uuid": "a5e9c42f-12d3-4a8b-9c7e-6f1a2b3c4d5e",
     "version": [
       2,
       1,
@@ -12,15 +12,23 @@
     "min_engine_version": [
       1,
       21,
-      70
+      82
     ]
   },
   "modules": [
     {
-      "description": "Psybox Physics Engine Scripts",
+      "type": "data",
+      "uuid": "b6f8d53a-23e4-5b9c-ad8f-7a2b3c4d5e6f",
+      "version": [
+        2,
+        1,
+        3
+      ]
+    },
+    {
       "type": "script",
       "language": "javascript",
-      "uuid": "b4d7c6e5-4c02-4b56-b0e1-8b84c6d6b5c7",
+      "uuid": "c7a9e64b-34f5-6cad-be9a-8b3c4d5e6f7a",
       "version": [
         2,
         1,
@@ -38,8 +46,5 @@
       "module_name": "@minecraft/server-gametest",
       "version": "1.0.0-beta.1.21.70-stable"
     }
-  ],
-  "capabilities": [
-    "script_eval"
   ]
 }
