--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "psybox-physics-engine",
   "version": "2.1.3-beta",
-  "description": "마인크래프트 베드락 에디션용 고급 물리엔진",
+  "description": "Advanced physics simulation for Minecraft Bedrock Edition",
+  "main": "scripts/main.js",
   "scripts": {
     "build": "tsc",
-    "watch": "tsc --watch"
+    "dev": "tsc --watch",
+    "clean": "rimraf scripts"
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
-    "@types/node": "^20.0.0"
-  },
-  "dependencies": {
     "@minecraft/server": "2.0.0-beta.1.21.82-stable",
-    "@minecraft/server-gametest": "1.0.0-beta.1.21.70-stable"
-  }
+    "@minecraft/server-gametest": "1.0.0-beta.1.21.70-stable",
+    "typescript": "^5.3.0"
+  },
+  "author": "Psybox Physics Team",
+  "license": "MIT"
 }
