--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
     "target": "ES2020",
     "module": "ES2020",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "declaration": false,
     "outDir": "./scripts",
     "rootDir": "./src",
-    "removeComments": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src/**/*"
