--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "psybox-physics-engine",
-  "version": "2.1.3-beta",
-  "description": "Advanced physics simulation for Minecraft Bedrock Edition",
-  "main": "scripts/main.js",
+  "version": "2.1.4-beta",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "clean": "rimraf scripts"
+    "build": "tsc"
+  },
+  "dependencies": {
+    "@minecraft/server": "2.0.0-beta.1.21.82-stable",
+    "@minecraft/server-gametest": "1.0.0-beta.1.21.70-stable"
   },
   "devDependencies": {
-    "@minecraft/server": "2.0.0-beta.1.21.82-stable",
-    "@minecraft/server-gametest": "1.0.0-beta.1.21.70-stable",
-    "typescript": "^5.3.0"
-  },
-  "author": "Psybox Physics Team",
-  "license": "MIT"
+    "typescript": "^5.3.3"
+  }
 }
