--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "@minecraft/server": "2.0.0-beta.1.21.82-stable",
-    "@minecraft/server-gametest": "1.0.0-beta.1.21.70-stable"
+    "@minecraft/server-gametest": "1.0.0-beta.1.21.70-stable",
+    "@minecraft/vanilla-data": "1.21.81"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
