--- a/manifest.json
+++ b/manifest.json
@@ -40,11 +40,15 @@
   "dependencies": [
     {
       "module_name": "@minecraft/server",
-      "version": "2.0.0-beta.1.21.82-stable"
+      "version": "2.0.0-beta."
     },
     {
       "module_name": "@minecraft/server-gametest",
-      "version": "1.0.0-beta.1.21.70-stable"
+      "version": "1.0.0-beta"
+    },
+    {
+      "module_name": "@minecraft/vanilla-data",
+      "version": "1.21.81"
     }
   ]
 }
