--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,6 @@
     "strict": true,
     "outDir": "scripts",
     "rootDir": "src",
-    "types": [
-      "@minecraft/server",
-      "@minecraft/server-gametest",
-      "@minecraft/vanilla-data"
-    ]
+    "types": ["@minecraft/server", "@minecraft/server-gametest", "@minecraft/vanilla-data"]
   }
 }
