--- a/manifest.json
+++ b/manifest.json
@@ -1,54 +1,37 @@
 {
   "format_version": 2,
   "header": {
-    "name": "Psybox Physics Engine",
-    "description": "Advanced physics simulation for Minecraft Bedrock Edition",
-    "uuid": "a5e9c42f-12d3-4a8b-9c7e-6f1a2b3c4d5e",
+    "name": "물리엔진",
+    "description": "",
+    "uuid": "bb2e21f8-dc49-495c-894b-eff5de8d279a",
     "version": [
-      2,
       1,
-      3
+      0,
+      0
     ],
     "min_engine_version": [
       1,
       21,
-      82
+      80
     ]
   },
   "modules": [
     {
-      "type": "data",
-      "uuid": "b6f8d53a-23e4-5b9c-ad8f-7a2b3c4d5e6f",
-      "version": [
-        2,
-        1,
-        3
-      ]
-    },
-    {
       "type": "script",
       "language": "javascript",
-      "uuid": "c7a9e64b-34f5-6cad-be9a-8b3c4d5e6f7a",
+      "uuid": "6229de85-7eea-49d2-9188-549a2ff0e7f7",
       "version": [
-        2,
         1,
-        3
+        0,
+        0
       ],
-      "entry": "scripts/main.js"
+      "entry": "main.js"
     }
   ],
   "dependencies": [
     {
       "module_name": "@minecraft/server",
-      "version": "2.0.0-beta."
-    },
-    {
-      "module_name": "@minecraft/server-gametest",
-      "version": "1.0.0-beta"
-    },
-    {
-      "module_name": "@minecraft/vanilla-data",
-      "version": "1.21.81"
+      "version": "2.0.0-beta"
     }
   ]
 }
