--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ES2020",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./src",
+    "outDir": "./scripts",
+    "declaration": false,
     "strict": true,
-    "outDir": "scripts",
-    "rootDir": "src",
-    "types": ["@minecraft/server", "@minecraft/server-gametest", "@minecraft/vanilla-data"]
-  }
+    "noImplicitAny": false,
+    "skipLibCheck": true
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "scripts"]
 }
