--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,7 @@
   "dependencies": [
     {
       "module_name": "@minecraft/server",
-      "version": "2.0.0-beta"
+      "version": "1.19.0"
     }
   ]
 }
